Fix scrollbar

--- a/src/pages/Styles.scss
+++ b/src/pages/Styles.scss
@@ -5,7 +5,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 88vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,7 +18,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: 50rem;
+  min-height: 41rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -179,9 +179,6 @@ h2 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 /* MENU ITEM STYLING */
