--- a/src/pages/cube.scss
+++ b/src/pages/cube.scss
@@ -1,6 +1,6 @@
 .stage-cube-cont {
   width: 140%;
-  height: 100%;
+  height: 90%;
   top: 0;
   margin-top: 5%;
   padding-top: 15%;
